# every-ai

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
every_ai/: __init__.py
every_ai/backends/: __init__.py  base.py  exceptions.py  registry.py
every_ai/backends/anthropic/: backend.py
every_ai/backends/openai/: backend.py
src/every_ai/: __init__.py  base.py
src/every_ai/backends/: __init__.py
src/every_ai/backends/openai/: backend.py
tests/: mock_backend.py  mock_backends.py  test_registry.py
