[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "every-ai"
authors = [{name = "Tom Usher", email = "tom@tomusher.com"}]
description = "A simple wrapper around multiple LLM/AI providers"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = [
    "openai==1.0.0b1"
]
[project.optional-dependencies]
openai = [
    "openai>=1.0.0b1"
]
anthropic = [
    "anthropic>=0.3.11"
]
testing = [
    "pre-commit>=2.21.0",
    "pytest>=7.2.2",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.1.3",
    "mkdocs-awesome-pages-plugin>=2.8.0"
]

[project.urls]
Home = "https://github.com/tomusher/every-ai"

[tool.ruff]
select = ["F", "E", "C90", "I", "B", "DJ", "RUF", "TRY", "C4"]
ignore = ["TRY003", "E501"]

[tool.flit.module]
name = "every_ai"

[tool.pytest.ini_options]
pythonpath = ["./", "./tests"]

[tool.flit.sdist]
include = [
]
exclude = [
    "every_ai/test",
    "tests",
    "testmanage.py",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml"
]
